# simple-math-eval

./: Makefile  README.md  eval.py  pyproject.toml  requirements.txt
simple_math_eval/: grader.py
