[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-math-eval"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Zichen/simple-math-eval#readme"
Issues = "https://github.com/Zichen/simple-math-eval/issues"
Source = "https://github.com/Zichen/simple-math-eval"

[tool.hatch.version]
path = "simple_math_eval/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:simple_math_eval tests}"

[tool.coverage.run]
source_pkgs = ["simple_math_eval", "tests"]
branch = true
parallel = true
omit = [
  "simple_math_eval/__about__.py",
]

[tool.coverage.paths]
simple_math_eval = ["simple_math_eval", "*/simple-math-eval/simple_math_eval"]
tests = ["tests", "*/simple-math-eval/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
